Fixed Tables and Blockquotes in Dark Mode, Added Merriweather as a Font

--- a/theme.css
+++ b/theme.css
@@ -3,7 +3,7 @@
 
 /* ---------- fonts ---------- */
 @import url('https://fonts.googleapis.com/css2?family=Noto+Sans+Symbols+2&display=swap');
-@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&family=Figtree:wght@300;400;500;600;700;800&family=Koh+Santepheap:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Rubik:wght@300;400;500;600;700;800&family=Tilt+Warp&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=EB+Garamond:wght@400;500;600;700;800&family=Figtree:wght@300;400;500;600;700;800&family=Koh+Santepheap:wght@300;400;700;900&family=Poppins:wght@300;400;500;600;700;800&family=Rubik:wght@300;400;500;600;700;800&family=Tilt+Warp&family=Merriweather:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Alice&family=Anonymous+Pro:ital,wght@0,400;0,700;1,400;1,700&family=Arima:wght@100;200;300;400;500;600;700&family=Averia+Gruesa+Libre&family=Comfortaa:wght@300;400;500;600;700&family=Courgette&family=EB+Garamond:ital,wght@0,400;0,500;0,600;0,700;0,800;1,400;1,500;1,600;1,700;1,800&family=Forum&family=Handlee&family=Hind:wght@300;400;500;600;700&family=IBM+Plex+Sans:wght@100;200;300;400;500;600;700&family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Merienda:wght@300;400;500;600;700;800;900&family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100&family=Nunito:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,200&family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500&family=Space+Mono:ital,wght@0,400;0,700;1,400;1,700&family=Ubuntu+Mono:ital,wght@0,400;0,700;1,400;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather+Sans:wght@300;400;500;600;700;800&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@200;300;400;600;700;800;900&display=swap');
@@ -1025,6 +1025,7 @@ body {
 }
 .theme-dark {
     --text-highlight-bg: hsl(var(--accent-h), var(--accent-s), var(--accent-l), 0.3);
+    --color-base-05: var(--color-base-20);
 }
 
 /* ----- default (Macaroon) theme ----- */
@@ -1415,10 +1416,10 @@ body, .theme-default {
 
   /* ----- novelist theme + novel css class ----- */
   .theme-novelist {
-    --font-default: Georgia, 'Libre Baskerville', 'Baskerville Old Face', 'Book Antiqua', sans-serif;
+    --font-default: Merriweather, Georgia, 'Libre Baskerville', 'Baskerville Old Face', 'Book Antiqua', sans-serif;
   }
   .novel {
-    --font-text: 'Libre Baskerville', Georgia, 'Baskerville Old Face', 'Book Antiqua', Alice, 'EB Garamond', sans-serif !important;
+    --font-text: Merriweather, 'Libre Baskerville', Georgia, 'Baskerville Old Face', 'Book Antiqua', Alice, 'EB Garamond', sans-serif !important;
     --inline-title-color: var(--text-normal);
   }
   .novel img {
@@ -2102,7 +2103,7 @@ background-image: linear-gradient(rgb(244, 205, 11), rgb(216, 171, 57));
     --color-base-60: #7b7b7b;
     --color-base-70: #999999;
     --color-base-100: #2f2f2f;
-  }
+  }++++++++
   .theme-anytype.theme-dark {
     color-scheme: dark;
     --background-modifier-border: #323130;
@@ -3713,6 +3714,7 @@ settings:
             - Hindi
             - Roboto
             - 'Merriweather Sans'
+            - 'Merriweather'
             - 'Nunito Sans'
             - 'IBM Plex Sans'
             - Forum
